--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,7 +113,9 @@ footer {
 
 @media only screen and (max-width: 993px) {
   .navbar {
-    .collapse {
+    .collapse,
+    .show,
+    .collapsing {
       padding: 1vw;
     }
   }
